Fixed bug 44396: LINK elements now act like links when they have generated content. b=44396 r=dbaron