layout/html/content/src/nsHTMLLinkElement.cpp
@@ -322,8 +322,12 @@ nsHTMLLinkElement::HandleDOMEvent(nsIPresContext* aPresContext,
                            PRUint32 aFlags,
                            nsEventStatus* aEventStatus)
 {
-  return mInner.HandleDOMEvent(aPresContext, aEvent, aDOMEvent,
-                               aFlags, aEventStatus);
+  return mInner.HandleDOMEventForAnchors(this,
+                                         aPresContext, 
+                                         aEvent, 
+                                         aDOMEvent,
+                                         aFlags, 
+                                         aEventStatus);
 }
 
 
